# emotion-storage-server

./: README.md  pyproject.toml
app/: main.py
app/routes/: custom_router.py  index.py
app/routes/emotion/: emotion.py
